--- a/bootcamp/R/1_linear_regression_R.ipynb
+++ b/bootcamp/R/1_linear_regression_R.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
     "# import libraries\n",
     "library(caret)\n",
     "library(tidyverse)\n",
-    "library(AppliedPredictiveModeling)\n"
+    "library(AppliedPredictiveModeling)"
    ]
   },
   {
@@ -34,6 +34,13 @@
    "source": [
     "<img src=\"alligator.jpeg\",width=400,height=200 >\n",
     "[Image via Wikimedia Commons]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explore + visualize data"
    ]
   },
   {
@@ -138,6 +145,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -193,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And take a look at the fit:"
+    "### Take a look at model fit"
    ]
   },
   {
@@ -269,17 +283,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# add clf / cross-validation / scoring here"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -300,6 +303,13 @@
     "<img src=\"abalone.jpg\",width=400,height=200 >\n",
     "\n",
     "[Image via Wikimedia Commons]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explore + visualize data"
    ]
   },
   {
@@ -419,7 +429,8 @@
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -457,6 +468,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create training and test sets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
@@ -475,7 +493,8 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -539,6 +558,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build model + use to predict"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
@@ -555,7 +581,8 @@
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -616,6 +643,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate performance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {
@@ -672,15 +706,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Linear Regression \n",
+       "\n",
+       "3759 samples\n",
+       "   8 predictor\n",
+       "\n",
+       "No pre-processing\n",
+       "Resampling: Cross-Validated (10 fold) \n",
+       "Summary of sample sizes: 3383, 3383, 3383, 3383, 3383, 3384, ... \n",
+       "Resampling results:\n",
+       "\n",
+       "  RMSE      Rsquared   MAE     \n",
+       "  2.186245  0.5338857  1.570535\n",
+       "\n",
+       "Tuning parameter 'intercept' was held constant at a value of TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "10-fold cross validation (method = \"cv\" and number = 10). \n",
+    "# 10-fold cross validation (method = \"cv\" and number = 10). \n",
     "set.seed(42)\n",
-    "model <- train(price ~ ., diamonds,\n",
+    "model <- train(Rings ~ ., train,\n",
     "               method = \"lm\", \n",
     "               trControl = trainControl(method = \"cv\", \n",
     "                                        number = 10, \n",
